# root2py

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  output.hdf5  output.pkl  pyproject.toml  root2py.dataoutput.hdf5
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  index.rst  make.bat
src/root2py/: __init__.py  dataimport.py  importdata.py  root2py.py
src/root2py/data/: sample.root
tests/: output.hdf5  skim_small_photons_0PU_bc_stc_hadd.hdf5  test.ipynb  test.py  test_root2py.py
